[package]
name = "lux-pm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
hex = "0.4.3"
rattler_conda_types = "0.42.3"
rattler_package_streaming = "0.23.20"
rattler_solve = "4.1.1"
reqwest = { version = "0.12.25", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
url = "2.5.7"
